# br-community-mcp

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  br_community_mcp.spec  build.py  coverage.xml  pyproject.toml  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: python-mcp-expert.agent.md
.github/prompts/: python-mcp-server-generator.prompt.md
.github/workflows/: docker-publish.yml  quality.yml  release-binaries.yml  test.yml
src/: __init__.py  models.py  server.py  utils.py
tests/: __init__.py  test_server.py
tests/e2e/: README.md  __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_utils.py
