[project]
name = "br-community-mcp"
version = "1.0.0"
description = "MCP server for searching the B&R Automation community forum"
readme = "README.md"
authors = [
    {name = "Lars Jensen"},
    {name = "Andreas Poulsen"},
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
]
dev = [
    "bandit>=1.8.0",
    "radon>=6.0.0",
    "pre-commit>=4.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
br-community-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
